// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupAdminParameters /> render correctly 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      global.params
    </h3>
  </div>
  <div
    className="box-content"
  >
    <GroupForm />
    <Connect(DeleteModal)
      buttonConfirmMessage="global.removeDefinitively"
      closeDeleteModal={[Function]}
      deleteElement={[Function]}
      deleteModalContent="group.admin.parameters.modal.delete.content"
      deleteModalTitle="group.admin.parameters.modal.delete.title"
      showDeleteModal={false}
    />
    <ButtonGroup>
      <Connect(SubmitButton)
        disabled={false}
        id="confirm-group-edit"
        isSubmitting={false}
        label="global.save"
        onSubmit={[Function]}
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="danger"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-trash"
        />
         
        global.delete
      </Button>
      <AlertForm
        invalid={false}
        submitFailed={false}
        submitSucceeded={false}
        submitting={false}
        valid={false}
      />
    </ButtonGroup>
  </div>
</div>
`;

exports[`<GroupAdminParameters /> render correctly with disabled button 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      global.params
    </h3>
  </div>
  <div
    className="box-content"
  >
    <GroupForm />
    <Connect(DeleteModal)
      buttonConfirmMessage="global.removeDefinitively"
      closeDeleteModal={[Function]}
      deleteElement={[Function]}
      deleteModalContent="group.admin.parameters.modal.delete.content"
      deleteModalTitle="group.admin.parameters.modal.delete.title"
      showDeleteModal={false}
    />
    <ButtonGroup>
      <Connect(SubmitButton)
        disabled={false}
        id="confirm-group-edit"
        isSubmitting={false}
        label="global.save"
        onSubmit={[Function]}
      />
      <OverlayTrigger
        defaultOverlayShown={false}
        key="top"
        overlay={
          <_default
            className="text-left"
            id="tooltip-top"
            style={
              Object {
                "wordBreak": "break-word",
              }
            }
          >
            group-used-in-mailinglist
          </_default>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={true}
          onClick={[Function]}
        >
          <i
            className="fa fa-trash"
          />
           
          global.delete
        </Button>
      </OverlayTrigger>
      <AlertForm
        invalid={false}
        submitFailed={false}
        submitSucceeded={false}
        submitting={false}
        valid={false}
      />
    </ButtonGroup>
  </div>
</div>
`;
